tests/sparql/test_suites/internal/ill-typed/good_queries/database/boolean.rq
PREFIX : <http://www.path.com/>
SELECT ?o (STR(?o) AS ?str)
WHERE {
  ?s :boolean ?o
}
ORDER BY ?s
